add building and running section